# ugh

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md
add_hyperedges/: Cargo.toml  README.md
add_hyperedges/src/: main.rs
collector/: Cargo.toml  README.md
collector/data/: batloader_results.json  gootloader_results.json  hversu_results.json  results.json
collector/src/: googler.rs  gptcall.rs  gptextract.rs  lib.rs  my_secret.rs  simparse.rs  types.rs
example_data/: netsupp_2806.graphml  vt_domain_example.json  vt_file_example.json  vt_ip_example.json
merger/: Cargo.toml  README.md
merger/src/: lib.rs
universal_graph_transformer/: .env-examples  Cargo.toml
universal_graph_transformer/examples/: main.rs
universal_graph_transformer/src/: callgpt.rs  graphml_parser.rs  input_type.rs  iops.rs  lib.rs  main.rs  my_secret.rs  mysecret.rs  scraper.rs  transform.rs  types.rs  vt_api.rs  vt_parser.rs
web_server/: .env.example  Cargo.toml
web_server/outputs/: 11351729-1198-4450-b1a1-2a2ba126c4c1.json  1caf50f1-286a-4d7f-9ed6-2a02c74a9ea9.json  bde907f5-3f5b-475c-b96f-9248563ddca1.json  db3be355-a82b-4a95-b8b4-80c7bc560fa5.json
web_server/src/: main.rs  template.rs
web_server/src/handlers/: mod.rs  text_submit.rs
web_server/src/models/: mod.rs  text_submit.rs
web_server/templates/: index.html
web_server/uploads/: 11351729-1198-4450-b1a1-2a2ba126c4c1-systembc.graphml
