[workspace]
members = [ "add_hyperedges", "collector", "merger", "universal_graph_transformer","web_server"]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
quick-xml = { version = "0.31.0", features = ["encoding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.203"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
regex = "1.0"
base64 = "0.13"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
futures = "0.3.30"
anyhow = "1.0.86"
uuid = { version = "1", features = ["v4"] }