[package]
name = "universal_data_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.31.0", features = ["encoding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.0"
base64 = "0.13"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }