[package]
name = "universal_graph_transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "universal_graph_transformer"
path = "src/lib.rs"

[dependencies]
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
regex.workspace = true
base64.workspace = true
chrono.workspace = true
tokio.workspace = true
dotenv.workspace = true
lazy_static.workspace = true

