[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5", features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
futures.workspace = true
uuid.workspace = true
dotenv.workspace = true
universal_graph_transformer = {path = "../universal_graph_transformer" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
collector = {path = "../collector" }
merger = {path = "../merger" }
anyhow.workspace = true